# EDOS-DETECTION-KIT

./: .gitignore  ARCHITECTURE.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/auth-test/: page.tsx
app/dashboard/: page.tsx
backend/: README.md  database-schema.sql  main.py  pyproject.toml
backend/app/: database.py  realtime_manager.py  supabase_client.py
backend/app/api/: alerts.py  auth_old.py  logs.py  metrics.py  network.py  resources.py  settings_api.py  supabase_auth.py  websockets.py
backend/app/core/: config.py
backend/app/models/: database.py
backend/app/services/: data_generator.py
components/: auth-context.tsx  auth-guard.tsx  auth-modal.tsx  dashboard-layout.tsx  sidebar.tsx
lib/: api.ts  supabase.ts
live-console-app (2)/: README.md  index.html  package.json
live-console-app (2)/src/: App.jsx  LiveConsolePage.jsx  styles.css
